--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     overflow-x: hidden;
     user-select: none;
+    font-family: 'Questrial', sans-serif;
 }
 a{
     cursor: pointer;
